<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/study"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    tools:context=".homeScreen">

    <TextView
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="681dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/quiz_and_news"
        android:textAlignment="center"
        android:textColor="#455A64"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="131dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/start_quiz"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabBar" />

    <Button
        android:id="@+id/news"
        android:layout_width="227dp"
        android:layout_height="82dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="288dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/latest_news"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startQuiz" />

</androidx.constraintlayout.widget.ConstraintLayout>